--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,25 +1,5 @@
 @import '../../variables.scss';
 
-@mixin responsive-tablet-mobile-headerContainer{
-    @media (max-width: 1263px){
-        gap: 0;
-
-        img{
-            align-self: center;
-        }
-
-        .navLinks{
-            display: none;
-        }
-
-        svg{
-            display: flex;
-            position: absolute;
-            right: 20px;
-        }
-    }
-}
-
 .headerContainer{
     display: flex;
     align-items: center;
@@ -54,6 +34,31 @@
         height: 40px;
         color: $light-color;
     }
+}
 
-    @include responsive-tablet-mobile-headerContainer;
+@media (max-width: 1263px){
+    .headerContainer {
+        gap: 0;
+    }
+    .headerContainer img{
+        align-self: center;
+    }
+    .headerContainer .navLinks{
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        background-color: $primary-color;
+        padding: 10px 0;
+    }
+    .headerContainer .navLinks.open{
+        display: flex;
+    }
+    .headerContainer svg{
+        display: flex;
+        position: absolute;
+        right: 20px;
+    }
 }
