--- a/src/pages/Membros/Editar/Edit.module.scss
+++ b/src/pages/Membros/Editar/Edit.module.scss
@@ -337,6 +337,18 @@
         font-weight: 400;
     }
 
+    // Remova ou comente quaisquer regras de posicionamento fixo
+    // @media (min-width: 1301px) {
+    //     position: fixed;
+    //     bottom: 0;
+    //     left: 0;
+    //     right: 0;
+    //     margin: 0 auto;
+    //     background-color: white;
+    //     z-index: 1000;
+    //     padding: 10px 0;
+    // }
+
     @include responsive-comissions;
 }
 
