--- a/src/pages/Membros/Registrar/Register.module.scss
+++ b/src/pages/Membros/Registrar/Register.module.scss
@@ -293,6 +293,14 @@
         grid-column: 4/6;
     }
 
+    .inputOAB {
+        grid-column: 1/3;
+        
+        @media (max-width: 1300px) {
+            grid-column: 1/3;
+        }
+    }
+
     @include responsive-formPersonal;
 
     input:required {
@@ -301,6 +309,18 @@
 
     input:invalid {
         border-color: #ff4444;
+    }
+
+    input[required] {
+        border-left: 3px solid $primary-color;
+
+        &::placeholder {
+            color: #666;
+            &::after {
+                content: ' *';
+                color: $primary-color;
+            }
+        }
     }
 }
 
@@ -483,5 +503,53 @@
     &.active {
         background: $primary-color;
         color: white;
+    }
+}
+
+.oabContainer {
+    display: grid;
+    grid-column: 1/4;
+    grid-template-columns: 2fr 1fr;
+    gap: 10px;
+    margin-top: 10px;
+
+    .inputOabNumber, .inputOabState {
+        display: flex;
+        flex-direction: column;
+
+        span {
+            margin-bottom: 5px;
+            font-size: 14px;
+            font-weight: bold;
+            color: #666;
+        }
+
+        input, select {
+            height: 50px;
+            padding: 0 15px;
+            border-radius: 5px;
+            border: 1px solid #777;
+            font-size: 16px;
+            font-family: 'Roboto';
+
+            &:required {
+                border-left: 3px solid $primary-color;
+            }
+        }
+
+        select {
+            background-color: white;
+            cursor: pointer;
+
+            &:focus {
+                outline: none;
+                border-color: $primary-color;
+            }
+        }
+    }
+
+    @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+        gap: 15px;
     }
 }
