correção e adição de paginas

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,6 +36,20 @@
     }
 }
 
+.logoutButton {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: inherit;
+    padding: 0;
+    font-family: inherit;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 @media (max-width: 1263px){
     .headerContainer {
         gap: 0;
