--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,17 +1,20 @@
 @import '../../variables.scss';
 
-.containerBody{
-    width: 1300px;
+.containerBody {
+    width: 90%;
+    max-width: 1300px;
     margin: 3% auto;
+    padding: 0 15px;
 
-    .articleContainer{
+    .articleContainer {
         display: flex;
-        column-gap: 16px;
+        flex-wrap: wrap;
+        gap: 16px;
         margin-top: 16px;
     }
 }
 
-.content1, .content2, .content3{
+.content1, .content2, .content3 {
     display: flex;
     flex-direction: column;
     height: 416px;
@@ -19,8 +22,10 @@
     border-radius: 10px;
     padding: 25px;
     margin-bottom: 50px;
+    flex: 1;
+    min-width: 300px;
 
-    svg{
+    svg {
         color: $primary-color-dark;
         width: 24px;
         height: 24px;
@@ -28,7 +33,7 @@
         position: absolute;
     }
 
-    button{
+    button {
         background-color: $primary-color;
         color: $light-color;
         border-radius: 5px;
@@ -38,34 +43,34 @@
     }
 }
 
-.content1{
+.content1 {
     min-width: 526px;
     width: 40%;
 
-    .nameDate{
+    .nameDate {
         display: flex;
         justify-content: space-between;
         margin: 10px 0 25px 0;
     }
 
-    ul{
+    ul {
         list-style: none;
         font-size: 20px;
         line-height: 40px;
 
-        li{
+        li {
             display: flex;
             justify-content: space-between;
         }
     }
 
-    .buttons{
+    .buttons {
         display: flex;
         justify-content: space-between;
         height: 100%;
         align-items: end;
 
-        button{
+        button {
             width: 230px;
             height: 40px;
             font-size: 16px;
@@ -73,26 +78,27 @@
     }
 }
 
-.content2{
+.content2 {
     display: flex;
     position: relative;
     min-width: 417px;
     width: 35%;
 
-    .infoContent2{
+    .infoContent2 {
         margin-top: 25px;
         font-size: 20px;
 
-        p:nth-of-type(n+2){
+        p:nth-of-type(n+2) {
             margin-top: 56px;
         }
-        
-        a{
+
+        a {
             color: $secondary-color;
             float: right;
         }
     }
-    button{
+
+    button {
         height: 40px;
         font-size: 16px;
         position: absolute;
@@ -101,22 +107,22 @@
     }
 }
 
-.content3{
+.content3 {
     min-width: 307px;
     width: 30%;
 
-    span{
+    span {
         margin-top: 10px;
     }
 
-    .inputs{
+    .inputs {
         display: flex;
         flex-direction: column;
         margin-top: 25px;
         height: 100px;
         justify-content: space-between;
 
-        input{
+        input {
             width: 100%;
             height: 40px;
             border: 0;
@@ -126,17 +132,43 @@
         }
     }
 
-    .buttons{
+    .buttons {
         display: flex;
         flex-direction: column;
         height: 45%;
         justify-content: space-between;
         margin-top: 25px;
 
-        button{
+        button {
             font-size: 16px;
             width: 100%;
             height: 40px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .content1, .content2, .content3 {
+        width: 100%;
+        height: auto;
+        min-height: 416px;
+    }
+
+    .content1 {
+        .buttons {
+            flex-direction: column;
+            gap: 10px;
+
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .content2 {
+        button {
+            position: relative;
+            width: 100%;
         }
     }
 }
