--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,78 +1,93 @@
 @import '../../variables.scss';
 
-.headerContainer{
+.headerContainer {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 80px;
     background-color: $primary-color;
-    justify-content: center;
-    gap: 152px;
-    padding: 0 112px;
+    padding: 0 2rem;
+    position: relative;
 
-    img{
+    img {
         width: 90px;
         height: 60px;
     }
 
-    .navLinks{
-        width: 1075px;
+    .navLinks {
         display: flex;
-        justify-content: space-between;
+        gap: 2rem;
+        align-items: center;
         font-family: 'Roboto Slab';
         font-weight: 400;
+
+        a, .logoutButton {
+            color: $light-color;
+            font-size: 1rem;
+            text-decoration: none;
+            transition: opacity 0.2s;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
     }
 
-    a{
-        color: $light-color;
-        font-size: 20px;
-    }
-
-    svg{
+    .menuButton {
         display: none;
-        width: 40px;
-        height: 40px;
+        background: none;
+        border: none;
         color: $light-color;
+        cursor: pointer;
+        padding: 0.5rem;
+
+        svg {
+            width: 24px;
+            height: 24px;
+        }
     }
 }
 
 .logoutButton {
     background: none;
     border: none;
-    color: white;
     cursor: pointer;
-    font-size: inherit;
-    padding: 0;
     font-family: inherit;
+    padding: 0;
 
     &:hover {
         text-decoration: underline;
     }
 }
 
-@media (max-width: 1263px){
+@media (max-width: 1024px) {
     .headerContainer {
-        gap: 0;
-    }
-    .headerContainer img{
-        align-self: center;
-    }
-    .headerContainer .navLinks{
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 80px;
-        left: 0;
-        width: 100%;
-        background-color: $primary-color;
-        padding: 10px 0;
-    }
-    .headerContainer .navLinks.open{
-        display: flex;
-    }
-    .headerContainer svg{
-        display: flex;
-        position: absolute;
-        right: 20px;
+        .menuButton {
+            display: block;
+        }
+
+        .navLinks {
+            display: none;
+            position: absolute;
+            top: 80px;
+            left: 0;
+            right: 0;
+            background-color: $primary-color;
+            flex-direction: column;
+            padding: 1rem;
+            gap: 1rem;
+            z-index: 1000;
+            
+            &.open {
+                display: flex;
+            }
+
+            a, .logoutButton {
+                width: 100%;
+                text-align: center;
+                padding: 0.5rem;
+            }
+        }
     }
 }
