--- a/src/pages/Assistidos/Assistidos.module.scss
+++ b/src/pages/Assistidos/Assistidos.module.scss
@@ -99,6 +99,16 @@
     }
 }
 
+.notification {
+    background-color: #fff3cd;
+    color: #856404;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    border: 1px solid #ffeeba;
+    text-align: center;
+}
+
 .formOverlay {
     position: fixed;
     top: 0;
