--- a/src/pages/Processos/Processo.module.scss
+++ b/src/pages/Processos/Processo.module.scss
@@ -91,6 +91,48 @@
     width: 90%;
     max-width: 500px;
     margin: 0 15px;
+
+    .searchAssistido {
+        margin-bottom: 1rem;
+        
+        input {
+            width: 100%;
+            padding: 0.75rem;
+            border: 2px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+            
+            &:focus {
+                border-color: #800100;
+                outline: none;
+            }
+        }
+    }
+
+    .assistidoInfo {
+        background: #f8f8f8;
+        padding: 1rem;
+        border-radius: 4px;
+        margin-bottom: 1rem;
+
+        p {
+            margin: 0.25rem 0;
+        }
+    }
+
+    input:disabled, select:disabled {
+        background-color: #f5f5f5;
+        cursor: not-allowed;
+    }
+
+    button:disabled {
+        background-color: #cccccc;
+        cursor: not-allowed;
+
+        &:hover {
+            background-color: #cccccc;
+        }
+    }
 }
 
 @media (max-width: 768px) {
