--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,9 @@
-$primary-color: #B90504;
+$primary-color: #800100;
 $primary-color-light: #FF3433;
-$primary-color-dark: #800100;
-$secondary-color: #312782;
+$primary-color-dark: #660100;
+$secondary-color: #333333;
 $secondary-color-light: #6359B2;
 $secondary-color-dark: #0F084D;
-$light-color: #fff;
+$light-color: #FFFFFF;
 $dark-color: #191919;
+$background-color: #F5F5F5;
