--- a/src/pages/Triunvirato/Triunvirato.module.scss
+++ b/src/pages/Triunvirato/Triunvirato.module.scss
@@ -13,3 +13,26 @@
     width: calc(100% - 220px);
     float: left;
 }
+
+.triunvirato button {
+    margin-right: 10px;
+    padding: 5px 10px;
+    background-color: #800100; // Alterado de azul para #800100
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.triunvirato button:hover {
+    background-color: #660100; // Alterado de azul para #660100
+}
+
+.searchInput {
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 1rem;
+}
