--- a/src/pages/NAJUP/NAJUP.module.scss
+++ b/src/pages/NAJUP/NAJUP.module.scss
@@ -1,15 +1,72 @@
+@import '../../variables.scss';
+
 .containerMain {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Garante que o container ocupe toda a altura da tela */
     padding: 20px;
     background-color: #f5f5f5;
+    max-width: 960px; /* Largura máxima para centralizar */
+    margin: 0 auto; /* Centraliza o conteúdo */
+    overflow: hidden; /* Limpa o float */
 }
 
 .menuLateral {
     width: 200px;
     float: left;
     margin-right: 20px;
+
+    ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+            background-color: #e0e0e0;
+            padding: 10px;
+            margin-bottom: 5px;
+            border-radius: 5px;
+            text-align: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: #800100;
+            }
+
+            &.active {
+                background-color: $primary-color;
+                color: $light-color;
+            }
+        }
+    }
 }
 
 .contentArea {
-    width: calc(100% - 220px);
-    float: left;
+    flex: 1; /* Faz a área de conteúdo crescer para ocupar o espaço restante */
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+    max-height: 400px; /* Limita a altura máxima */
+    overflow-y: auto; /* Adiciona scroll vertical se necessário */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    @media (max-width: 768px) {
+        width: 100%; /* Ajusta para largura total em telas menores */
+        float: none;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+    }
 }
