--- a/src/pages/Plantao/T's/Ts.module.scss
+++ b/src/pages/Plantao/T's/Ts.module.scss
@@ -448,6 +448,54 @@
     }
 }
 
+.modalDeleteConfirm {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+
+    .modalContent {
+        text-align: center;
+
+        h4 {
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        .modalActions {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+
+            .confirmBtn {
+                background-color: $primary-color;
+                color: $light-color;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+
+            .cancelBtn {
+                background-color: #ccc;
+                color: #333;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
 .memberSelect {
     width: 100%;
     padding: 8px;
