--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -91,3 +91,23 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .headerContainer {
+        padding: 0 1rem;
+
+        img {
+            width: 70px;
+            height: 50px;
+        }
+
+        .navLinks {
+            padding: 0.5rem;
+            gap: 0.5rem;
+
+            a, .logoutButton {
+                font-size: 0.9rem;
+            }
+        }
+    }
+}
