--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -25,7 +25,7 @@
         }
 
         img{
-            width: 100%;
+            width: 80px;
         }
 
     }
@@ -62,28 +62,32 @@
     }
 }
 
-.footerContainer{
+.footerContainer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 200px;
-    background-color: #800100;
+    height: 300px;
+    background-color: #882b2b;
     color: white;
-    padding: 20px 10px;
+    padding: 20px;
+    text-align: center;
     font-family: 'Roboto';
+    position: relative;
+    margin-bottom: 0;
 
     @include responsive-tablet-mobile-containerFooter;
 }
 
-.contentFooter{
+.contentFooter {
     width: 1300px;
-    justify-content: space-between;
-    display: flex;
+   justify-content: space-between;
+   display: flex;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    gap: 20px;
 
-    svg{
+    svg {
         color: $light-color;
         width: 30px;
         height: 30px;
@@ -92,76 +96,86 @@
     }
 
     @include responsive-tablet-mobile-contentFooter;
-
 }
 
-.copy{
-    display: flex;
-    width: 600px;
-    height: 60px;
-    align-items: center;
-    flex: 1;
-    text-align: center;
-    margin-bottom: 10px;
-
-    p, span{
-        color: $light-color;
-    }
-
-    p{
-        margin-left: 40px;
-    }
-
-    img{
-        width: 90px;
-        height: 60px;
-        max-width: 100px;
-        margin-bottom: 10px;
-    }
-
-    @include responsive-tablet-mobile-copy;
-}
-
-
-.socials{
+.copy {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 10px;
+    img {
+        width: 80px;
+        height: 20;
+    }
+}
+
+.socials {
+    display: flex;
+    flex-direction: row;
     align-self: flex-end;
     justify-content: center;
     gap: 15px;
-    height: 128px;
-    position: absolute;
-    flex: 1;
-    margin-bottom: 10px;
+    height: auto;
+    position: relative;
+    margin-bottom: 100;
+
+    a {
+        color: $light-color;
+        text-decoration: none;
+        transition: color 0.3s;
+
+        &:hover {
+            color: $primary-color;
+        }
+    }
 
     @include responsive-tablet-mobile-socials;
+
+    @media (max-width: 768px) {
+        flex-direction: row;
+        justify-content: center;
+        gap: 5px;
+    }
 }
 
-.contacts{
+.contacts {
     display: flex;
-    width: 1200px;
-    gap: 60px;
-    margin-top: 57px;
-    flex: 2;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 20px;
 
-    span{
-        margin-left: 10px;
-        color: $light-color;
-        font-size: 14px;
-    }
-    
-    div{
+    div {
         display: flex;
         align-items: center;
-        margin-bottom: 10px;
+        justify-content: center;
         gap: 5px;
     }
 
-    @include responsive-tablet-mobile-contacts;
-    @include responsivel-mobile-icon-location;
+    @media (max-width: 768px) {
+        align-items: center;
+        text-align: center;
+
+        div {
+            justify-content: center;
+        }
+    }
+}
+
+.socialAndContacts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
 }
 
 @media (max-width: 768px) {
