--- a/src/pages/Membros/Membros.module.scss
+++ b/src/pages/Membros/Membros.module.scss
@@ -121,6 +121,9 @@
         height: 46px;
         align-self: center;
         margin-top: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     @include responsive-containerBody;
