--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -148,13 +148,8 @@
 }
 
 @media (max-width: 768px) {
-    .content1, .content2, .content3 {
-        width: 100%;
-        height: auto;
-        min-height: 416px;
-    }
-
     .content1 {
+        min-width: 100%;
         .buttons {
             flex-direction: column;
             gap: 10px;
@@ -163,12 +158,15 @@
                 width: 100%;
             }
         }
-    }
 
-    .content2 {
-        button {
-            position: relative;
-            width: 100%;
+        ul {
+            font-size: 16px;
+            line-height: 30px;
+
+            li {
+                flex-direction: column;
+                align-items: flex-start;
+            }
         }
     }
 }
